// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cursor renders 0 1`] = `
Array [
  .c0 {
  cursor: 0;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: 0;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: 0;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`cursor renders function 1`] = `
Array [
  .c0 {
  cursor: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: has;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: has;
}

<div
    className="c0"
  />,
]
`;

exports[`cursor renders invalid theme path 1`] = `
Array [
  .c0 {
  cursor: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`cursor renders negative number 1`] = `
Array [
  .c0 {
  cursor: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`cursor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    cursor: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cursor: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cursor: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cursor: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    cursor: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cursor: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cursor: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cursor: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    cursor: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cursor: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cursor: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cursor: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    cursor: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cursor: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cursor: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cursor: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`cursor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    cursor: July;
  }
}

@media April {
  .c0 {
    cursor: August;
  }
}

@media January {
  .c0 {
    cursor: September;
  }
}

@media April {
  .c0 {
    cursor: November;
  }
}

@media June {
  .c0 {
    cursor: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    cursor: July;
  }
}

@media April {
  .c0 {
    cursor: August;
  }
}

@media January {
  .c0 {
    cursor: September;
  }
}

@media April {
  .c0 {
    cursor: November;
  }
}

@media June {
  .c0 {
    cursor: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    cursor: January;
  }
}

@media April {
  .c0 {
    cursor: December;
  }
}

@media January {
  .c0 {
    cursor: April;
  }
}

@media April {
  .c0 {
    cursor: May;
  }
}

@media June {
  .c0 {
    cursor: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    cursor: January;
  }
}

@media April {
  .c0 {
    cursor: December;
  }
}

@media January {
  .c0 {
    cursor: April;
  }
}

@media April {
  .c0 {
    cursor: May;
  }
}

@media June {
  .c0 {
    cursor: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`cursor renders postitive number 1`] = `
Array [
  .c0 {
  cursor: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`cursor renders string 1`] = `
Array [
  .c0 {
  cursor: July;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: July;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: June;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: June;
}

<div
    className="c0"
  />,
]
`;

exports[`cursor renders valid theme path 1`] = `
Array [
  .c0 {
  cursor: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  cursor: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
